--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,288 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@300;400;500&display=swap");
+
+body {
+  max-height: 100vh;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: "roboto condensed", Roboto, sans-serif;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  background-color: #222121;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  /* text-align: center; */
+  margin: 30px 0;
+  font-weight: bold;
+  font-size: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.loading {
+  font-size: 20px;
+  padding-top: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search-input {
+  background-color: #e1e2e3;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  height: 37px;
+  outline: none;
+  margin-left: 40px;
+  padding-left: 30px;
+  width: 300px;
+}
+
+/* ------------------------*/
+/* ----- xx header xx ---- */
+/* ------------------------*/
+
+/* .hidden {
+  display: none;
+} */
+
+header {
+  width: 1300px;
+  height: 80px;
+  border-bottom: 1px solid rgb(85, 84, 84);
+  /* border-right: 1px solid rgb(85, 84, 84); */
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+}
+
+.nav-header {
+  display: flex;
+  justify-content: space-evenly;
+  width: 1300px;
+  /* position: absolute;
+  top: 230px;
+  left: 80px; */
+  /* gap: 30px; */
+}
+
+.image-logo-header {
+  width: 150px;
+}
+
+.nav-header button {
+  height: 60px;
+  width: 180px;
+  /* width: 115px; */
+  background-color: #222121;
+  color: #ffffff;
+  /* font-weight: bolder; */
+  font-family: roboto condensed;
+  border: none;
+  border-bottom: solid 1px #ed1d25;
+  border-right: solid 1px #ed1d25;
+  border-radius: 5px;
+  font-size: 25px;
+}
+
+/* ------------------------*/
+/* ----- xx HOME xx ---- */
+/* ------------------------*/
+
+.home-container {
+  /* width: 1300px; */
+  height: 102vh;
+  object-fit: cover;
+  position: relative;
+}
+
+.main-nav-home {
+  /* width: 100%;
+  height: 100%; */
+  background-color: #fff;
+  position: absolute;
+  top: 80px;
+  left: 200px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.image-logo-home {
+  width: 300px;
+  margin-bottom: 20px;
+
+  /* position: absolute; */
+  /* top: 90px;
+  left: 130px; */
+}
+
+.nav-home {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 300px;
+  /* position: absolute; */
+  /* top: 230px;
+  left: 130px; */
+  gap: 20px;
+}
+
+.nav-home button {
+  height: 60px;
+  width: 300px;
+  /* width: 115px; */
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+  font-size: 25px;
+}
+
+/* --------------------------*/
+/* -- xx CHARACTERS page xx -- */
+/* --------------------------*/
+
+.character-top-section {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.character-container {
+  max-width: 1300px;
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.character-container article {
+  width: 595px;
+  height: 250px;
+  padding: 20px;
+  border: solid 1px #ed1d25;
+  border-radius: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+.char-description-button {
+  height: 100%;
+  width: 100%;
+  /* border: solid 1px #ed1d25; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.character-image {
+  border-radius: 5%;
+  margin-bottom: 10px;
+}
+
+.character-container span {
+  /* background-color: #fff; */
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.character-description {
+  margin-top: 20px;
+  text-align: left;
+  font-family: Roboto;
+}
+
+.char-button {
+  height: 25px;
+  width: 200px;
+  background-color: #fff;
+  color: #090909;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+  /* font-size: 25px; */
+}
+
+/* --------------------------*/
+/* -- xx COMICS page xx -- */
+/* --------------------------*/
+
+.comic-top-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comic-container {
+  max-width: 1300px;
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+}
+
+.comic-image {
+  border-radius: 5%;
+}
+
+.comic-container article {
+  width: 595px;
+  height: 330px;
+  padding: 20px;
+  border: solid 1px #ed1d25;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: flex-start; */
+  gap: 20px;
+}
+
+.comic-image {
+  border-radius: 5%;
+  margin-bottom: 10px;
+}
+
+.comic-container span {
+  /* background-color: #fff; */
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.comic-description {
+  margin-top: 20px;
+  text-align: left;
+  font-family: Roboto;
+}
+
+.colonne-2 {
+  width: 160%;
+  height: 100%;
+}
+
+.colonne-1 {
+  width: 40%;
+  height: 100%;
+}
+/* --------------------------*/
+/* - xx COMICSbyCHAR page xx - */
+/* --------------------------*/
+
+.character-image-logo {
+  border-radius: 50%;
+}
+
+.comic-by-char-top-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  margin-top: 20px;
 }
