--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ h1 {
 /* ------------------------*/
 
 /* .hidden {
-  display: none;
+  visibility: hidden;
 } */
 
 header {
@@ -157,6 +157,7 @@ header {
   justify-content: center;
   text-align: center;
   gap: 20px;
+  margin-bottom: 100px;
 }
 
 .character-container article {
@@ -215,8 +216,37 @@ header {
 
 .comic-top-section {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  gap: 30px;
+}
+
+.skip {
+  width: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination {
+  background-color: #222121;
+  border: 1px solid white;
+  color: white;
+  height: 20px;
+  width: 120px;
+  border-radius: 5px;
+  font-size: 13px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.pagination-last {
+  background-color: #222121;
+  border: 1px solid white;
+  color: rgb(241, 192, 192);
+  height: 20px;
+  width: 120px;
+  border-radius: 5px;
+  font-size: 13px;
 }
 
 .comic-container {
@@ -227,6 +257,7 @@ header {
   justify-content: center;
   text-align: center;
   gap: 20px;
+  margin-bottom: 100px;
 }
 
 .comic-image {
@@ -238,7 +269,7 @@ header {
   height: 330px;
   padding: 20px;
   border: solid 1px #ed1d25;
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   justify-content: space-between;
   /* align-items: flex-start; */
