--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,18 @@ header {
   /* font-size: 25px; */
 }
 
+.fav-button {
+  background-color: #222121;
+  border: 1px solid white;
+  color: white;
+  height: 20px;
+  width: 120px;
+  border-radius: 5px;
+  font-size: 13px;
+  margin-left: 10px;
+  margin-right: 3px;
+}
+
 /* --------------------------*/
 /* -- xx COMICS page xx -- */
 /* --------------------------*/
@@ -274,6 +286,9 @@ header {
   justify-content: space-between;
   /* align-items: flex-start; */
   gap: 20px;
+  /* white-space: wrap;
+  overflow: hidden;
+  text-overflow: ellipsis; */
 }
 
 .comic-image {
@@ -316,4 +331,22 @@ header {
   align-items: center;
   gap: 15px;
   margin-top: 20px;
+}
+
+/* --------------------------*/
+/* ------- xx FOOTER ------- */
+/* --------------------------*/
+
+Footer {
+  height: 100px;
+  border-top: solid 1px red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-logo-footer {
+  width: 40px;
+  border-radius: 5px;
+  margin: 10px;
 }
