--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ h1 {
   font-size: 40px;
 }
 
+h2 {
+  font-weight: bold;
+  font-size: 40px;
+}
+
 .loading {
   font-size: 20px;
   padding-top: 30px;
@@ -34,6 +39,14 @@ h1 {
   margin-left: 40px;
   padding-left: 30px;
   width: 300px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #000000;
+  text-decoration: none;
 }
 
 /* ------------------------*/
@@ -114,6 +127,58 @@ header {
   border: none;
   border-radius: 5px;
   font-size: 25px;
+}
+
+/* --------------------------*/
+/* -- xx LOGIN xx -- */
+/* --------------------------*/
+
+.login-main-nav-home {
+  background-color: #fff;
+  position: absolute;
+  top: 80px;
+  left: 200px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.login-home {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 100px;
+  gap: 20px;
+  padding-left: 4px;
+}
+
+.login-home {
+  border-radius: 5px;
+  font-size: 16px;
+  height: 37px;
+  outline: none;
+  width: 290px;
+  margin-bottom: 10px;
+}
+
+.login-nav-home-button {
+  height: 60px;
+  width: 300px;
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: bolder;
+  border: none;
+  border-radius: 5px;
+  font-size: 25px;
+  margin-bottom: 5px;
+}
+
+.errorMessage {
+  color: red;
+  margin-bottom: 10px;
+}
+
+span {
+  text-decoration: underline;
 }
 
 /* --------------------------*/
